Only ask once to send invitations when batch removing them.

BUG:259731